testdata/baselines/reference/submodule/conformance/typeOfThisInStaticMembers10(target=es6).errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
typeOfThisInStaticMembers10.ts(6,16): error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
typeOfThisInStaticMembers10.ts(12,16): error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
typeOfThisInStaticMembers10.ts(13,26): error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
typeOfThisInStaticMembers10.ts(14,22): error TS2816: Cannot use 'this' in a static property initializer of a decorated class.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== typeOfThisInStaticMembers10.ts (4 errors) ====
    declare const foo: any;
    
    @foo
    class C {
        static a = 1;
        static b = this.a + 1;
                   ~~~~
!!! error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
    }
    
    @foo
    class D extends C {
        static c = 2;
        static d = this.c + 1;
                   ~~~~
!!! error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
        static e = super.a + this.c + 1;
                             ~~~~
!!! error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
        static f = () => this.c + 1;
                         ~~~~
!!! error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
        static ff = function () { this.c + 1 }
        static foo () {
            return this.c + 1;
        }
        static get fa () {
            return this.c + 1;
        }
        static set fa (v: number) {
            this.c = v + 1;
        }
    }
    
    class CC {
        static a = 1;
        static b = this.a + 1;
    }
    
    class DD extends CC {
        static c = 2;
        static d = this.c + 1;
        static e = super.a + this.c + 1;
        static f = () => this.c + 1;
        static ff = function () { this.c + 1 }
        static foo () {
            return this.c + 1;
        }
        static get fa () {
            return this.c + 1;
        }
        static set fa (v: number) {
            this.c = v + 1;
        }
    }
    